package src.inheritance.dua.soal;

public class Lingkaran extends BangunDatar {
    public float r;

}
